<resources>
    <string name="app_name">Toilet</string>
    <string name="menu_settings">Settings</string>
    <string name="default_app_name">Unknown</string>
    <string name="content_description_app_icon">App icon</string>
    <string name="content_description_disabled">App disabled</string>
    <string name="title_activity_app_selector">AppSelectorActivity</string>
    <string name="tab_text_user_apps">User installed Apps</string>
    <string name="tab_text_all_apps">All Apps</string>
    <string name="menu_drop">Drop App to toilet</string>
    <string name="menu_enable">Enable App</string>
    <string name="menu_disable">Disable App</string>
    <string name="menu_release">Release it from toilet</string>
    <string name="menu_uninstall">Uninstall App</string>
    <string name="menu_disable_all">Disable all</string>
    <string name="menu_about">About</string>
    <string name="license">LICENSE</string>
    <string name="select_app">Click to drop into toilet</string>
    <string name="menu_create_shortcut">Create shortcut</string>
    <string name="shortcut_disable_all">Disable all</string>
    <string name="create_disable_all_shortcut">Create disable all shortcut</string>
</resources>