<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pers.nekogirlsaikou.toilet.ui.MainActivity">
    <item
        android:id="@+id/disable_all"
        android:orderInCategory="100"
        android:title="@string/menu_disable_all" />
    <item
        android:id="@+id/create_disable_all_shortcut"
        android:orderInCategory="101"
        android:title="@string/create_disable_all_shortcut" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="103"
        android:title="@string/menu_about" />
</menu>